Image handling fixes: 1. enforce "allow_upscale" when watermarking, cropping, or rotating an image. 2. thumbMaxSpace functions handling video thumbs. 2. albumThumbMaxSpace with random album thumbs. (Actually this "stabilizes" the album thumb so that it will not change during the duration of the script.)
git-svn-id: http://www.zenphoto.org/svn/trunk@3001 46129fc4-274e-7f48-8cfa-5da4c607681c

--- a/themes/effervescence_plus/styles/effervescence.css
+++ b/themes/effervescence_plus/styles/effervescence.css
@@ -435,6 +435,7 @@ text-align: left;
 	border: none;
 	line-height: 0px;
 	background: #fff;
+	text-align: center;
 }
 #randomhead img {
 border: 6px solid #fff;
@@ -550,6 +551,7 @@ ul.pagelist li.next {
 }
 .imagethumb {
 	float: left;
+	text-align: center;
 }
 #albums .imagethumb {
 	float: none;
